# qcpy

./: .gitignore  CONTRIBUTING.md  Graph.py  LICENSE.txt  QuantumCircuit.py  QuantumGate.py  Qubit.py  README.md  Visualizer.py  requirements.txt  setup.cfg  setup.py  test.py
.github/: pull_request_template.md
.github/workflows/: black.yml  main.yml  on_push  unit-test.yml
QCpy/: QuantumCircuit.py  QuantumGate.py  Qubit.py  Visualizer.py  __init__.py  qubit.py
env/: pyvenv.cfg
examples/: QSphere.py  StateVector.py  controlledPhaseGate.py  controlledphasegate.py  createCircuit.py  create_quantum_circuit.py  createcircuit.py  entangledQubits.py  entangledqubits.py  hadamard.py  hadamardState.py  hadamardstate.py  qsphere.py  quantumEntanglement.py  quantumentanglement.py  reverseCnot.py  reversecnot.py  show_quantum_circuit_drawing.py  show_quantum_circuit_state.py  statevector.py  swapGate.py  swapgate.py  toffoli.py  toffoliUsage.py  useHadamard.py  use_custon_quantum_gates.py  use_gpu_quantum_circuit.py  use_quantum_gate_array.py  use_quantum_gates.py  use_quantum_tools.py  use_visualize_quantum_circuit.py
qcpy/: __init__.py  qubit.py
quantumcircuit/: test_qc_01.py  test_qc_02.py  test_qc_06.py  test_qc_08.py  test_qc_09.py  test_qc_11.py  test_qc_14.py  test_qc_15.py  test_qc_18.py
src/: __init__.py
test/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_20.py
(+297 files in other folders)
