[metadata]
name = qcpython
version = 1.1.0
author = Brennan Freeze, Paris Osuch, Aundre Barras, Soren Richenberg, Suzanne Rivoire
author_email = freezebrennan@gmail.com, osuch@sonoma.edu, barras@sonoma.edu, richenbe@sonoma.edu, rivoire@sonoma.edu
description = QCpy is a comprehensive and user-friendly library for quantum computing, providing a wide range of functionality for quantum algorithms and quantum circuits. It is built on using open-source libraries NumPy and Matplotlib; compatible with Python 3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QCpython/QCpy

[options]
packages = find:
install_requires =
    matplotlib==3.7.2
    numpy==1.25.1
    setuptools==65.5.0
python_requires = >=3.8

[options.packages.find]
exclude = tests*